--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <title> Restaurante </title>
     
     <script defer type="module" src="../js/init/initheaderNav.js"></script>
+    <script defer type="module" src="../js/init/iniPage.js"></script>
     <script defer type="module" src="../js/init/initPedido.js"></script>
 
     <!-- Own Styles-->
@@ -33,6 +34,10 @@
                 <!-- Modal Carrito -->
             </div>
         </section>
+
+        <div class= "container-modal-Fin-Compra">
+            <!-- Modal Finalizar Compra -->
+        </div>
 
         
         <!-- ---------------  Mercaderia ------------------------->
