Se concreta la compra con el carrito y se elige la forma de entrega.

--- a/html/comanda.html
+++ b/html/comanda.html
@@ -25,6 +25,15 @@
                 <!-- Header navigator -->
 
             </section>
+            <!--           Section de los filtros -->
+            <div class="row" id="section-filtro-comanda">
+
+            </div>
+
+            <!--           Section de comandas          -->
+            <div class="row-cols-2 container-Comanda-Fecha" id="section-card-comanda">
+
+            </div>
  
     </body>
 
